# API/app/models/workspace.py
@@ -1,9 +1,9 @@
+from app.utils.schedules import SCHEDULES
 from app.models import Base
 from app.models.base_model import BaseModel
 from datetime import datetime
 from sqlalchemy.orm import relationship
 from sqlalchemy import Column, String, DATETIME, Integer, Boolean, Enum, ForeignKey
-from app.config import SCHEDULES
 import json
 
 
@@ -15,7 +15,7 @@ class Workspace(BaseModel, Base):
     field = Column(String(60), nullable=False)
     description = Column(String(500), nullable=True)
     picture = Column(String(256), nullable=True)
-    schedules = Column(String(256), default=SCHEDULES)
+    schedules = Column(String(1000), default=SCHEDULES)
     location = Column(String(256), nullable=True)
     contact = Column(String(256), nullable=True)
     appointment_per_hour = Column(Integer, default=1)
